--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <body>
       <header>
         <div class="container">
+          <div class="encabezado">
+            <h1>
+            <img class="logo" src="images/logo-home.png" alt="logo TeamUp!" >
+            </h1>
         <nav>
           <i class="fa fa-bars" aria-hidden="true"></i>
         </nav>
@@ -28,18 +32,13 @@
         </nav>
         -->
         </div>
+      </div>
       </header>
 
-    <div class="container">
-        <div class="encabezado">
-          <h1>
-          <img class="logo" src="images/logo-home.png" alt="logo TeamUp!" >
-          </h1>
-        </div>
 
     <div class="container">
-      <img src="images/hockey-home.jpg" alt="Foto de Home">
-      <div>
+      <img src="images/hockey-home.jpg" alt="Foto de Home" width="100%">
+      <div class="overlay">
         <div><h2>Estás a un click de empezar a jugar</h2>
         </div>
         <div>
@@ -154,5 +153,7 @@
         <i class="fa fa-twitter" aria-hidden="true"></i>
       </div>
     </footer>
+
+
   </body>
 </html>
