--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <div class="container">
       <img src="images/hockey-home.jpg" alt="Foto de Home" width="100%">
       <div class="overlay">
-        <div><h2>Estás a un click de empezar a jugar</h2>
+        <div class="wrapper"><h2>Estás a un click de empezar a jugar</h2>
         </div>
-        <div>
+        <div class="wrapper">
           <button type="button"> REGISTRATE
           </button>
         </div>
